# IGRIS_TEST

./: .env.example  .gitignore  README.md  pyproject.toml
config/: config.sample.json  igris-gpt.service.example
deploy/: igris.service
docs/: AGENTIC_CONSOLE_PLAN.md  AGENT_REASONING_LOOP.md  AUTONOMOUS_LOOP.md  CLAUDE_COWORK_ONBOARDING.md  CODE_NAVIGATION_TOOLS.md  CONTEXT_ENRICHED_CHAT.md  COST_ROUTING.md  DASHBOARD_UI.md  DEVELOPMENT_RUNBOOK.md  DOCTOR_VERIFY_CRASH_RECOVERY.md  GITHUB_PR_DRY_RUN_BENCHMARK.md  GIT_WORKFLOW.md  GOAP_PLANNER.md  HUMAN_ACCEPTANCE_TEST.md  IGRIS_VISION.md  LLM_MEMORY_ANALYSIS.md  LLM_PATCH_GENERATION.md  LLM_PLANNING_SAFE_SCHEMA.md  MISSION_BRAIN_OPERATIONAL_ADOPTION_PROTOCOL.md  OPERATIONAL_BASELINE.md  OPERATIONAL_DIAGNOSTICS.md  PREPARED_NOT_IMPLEMENTED.md  PROJECT_STATE_COOLDOWN.md  REAL_TASK_BENCHMARKS.md  SAFETY_ROLLBACK_POLICY.md  SAFE_TERMINAL_MVP_PLAN.md  SECURITY_MODEL.md  STRICT_SAFETY_EXPLAINABLE_SELECTION.md  SYSTEMD_SERVICE.md  TOOL_RUNTIME.md  UBUNTU_INSTALL.md  VALIDATION_MODEL.md  VASTAI_GATED_RUNTIME.md
igris/: __init__.py
scripts/: acceptance_check.sh  igris_api_helper.py  install_ubuntu.sh  restart_igris.sh  run_calibration_consolidated_873.py  run_mission_brain_adoption_792.py  run_mission_brain_adoption_793.py  run_mission_brain_criteria_comparison_870.py  run_mission_brain_extended_shadow_consolidated_862.py  run_mission_brain_extended_shadow_stability_861.py  run_mission_brain_hardening_826_replay.py  run_mission_brain_hardening_827_replay_delta.py  run_mission_brain_taxonomy_analysis_869.py  run_operational_benchmark.sh  run_shadow_calibration_replay_872.py  run_synthetic_ab_eval.py  setup_ollama.sh  smoke_test.sh  start_igris.sh  status_igris.sh  stop_igris.sh
tests/: conftest.py  git_status_policy.py  test_acceptance.py  test_acceptance_gate.py  test_agent_action_schema.py  test_agent_reasoning_loop.py  test_agent_reasoning_loop_api.py  test_anti_loop.py  test_assignment_router.py  test_assignment_router_gpu_escalation.py  test_autonomous_loop.py  test_behavior_tracker.py  test_benchmark_ping.py  test_benchmark_ping_api.py  test_calibration_consolidated_873.py  test_chat_context.py  test_chat_context_api.py  test_chat_streaming.py  test_code_navigation.py  test_code_navigation_api.py  test_command_risk_engine.py  test_config.py  test_config_validator.py  test_context_section_weighter.py  test_cost_api.py  (+97 more)
(+153 files in other folders)
